--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ body {
             
         </div>
         <div style="flex-grow: 1;">
-            <font clor='black'><a href="mailto:name@email.com">anuroop.parimi@gmail.com</a></font>
+            <font clor='black'><a href="mailto:name@email.com">varuna</a></font>
         </div>
     </div>
                     
