--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ body {
                     <div class="container" style="display: flex; height: 100px;">
         <div style="width: 25%;">
             
-            Halifax, NS . +1 902-989-3737,
+            Halifax, NS . +1 902-990-2999
             
         </div>
         <div style="flex-grow: 1;">
